# monarch_c

./: .gitignore  CMakeLists.txt
cmake/: FindProtobuf.cmake
include/: MonarchHeader.pb-c.h  monarch.h
src/: MonarchHeader.pb-c.c  monarch.c
test/: monarch_test.c
wrappers/Julia/: Monarch.jl
